# cmake-template

./: .clang-format  .clang-tidy  .clangd.in  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/template/: README.md  macos.yml  removal-list  template_name  template_repository
.github/workflows/: android.yml  clang-analyze.yml  clang-format.yml  clang-tidy.yml  cmake-multi-platform.yml  code-coverage.yml  codeql-analysis.yml  linux.yml  macos.yml  migrate-repo-template.yml  sanitizer.yml  windows.yml
cmake/: catch2.cmake  spdlog.cmake  vcpkg.cmake
include/cmake-template/: code-style.hpp  common.hpp  library.hpp  platform.hpp  version.hpp
src/: CMakeLists.txt  library.cpp  main.cpp
tests/: CMakeLists.txt  test_library.cpp
tests/src/: test_library.cpp  test_main.cpp
